[project]
name = "lunademo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13, <3.14"
dependencies = [
    "folium>=0.19.7",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyterlab-lsp>=5.2.0",
    "luna-bench",
    "luna-quantum>=1.2.0",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "notebook>=7.4.3",
    "pandas>=2.3.0",
    "pyscipopt>=6.1.0",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
luna-bench = { git = "https://github.com/aqarios/luna-bench" }
